# CC4102-Tareas

./: .gitignore  README.md
Tarea1/: .gitignore  CMakeLists.txt  README.md
Tarea1/experiments/: graficos.ipynb
Tarea1/include/: Cluster.h  Entry.h  MTreeCP.h  MTreeSS.h  Node.h  Point.h  RangeQuery.h
Tarea1/src/: Cluster.cpp  Entry.cpp  MTree.cpp  MTreeCP.cpp  MTreeSS.cpp  Node.cpp  Point.cpp  RangeQuery.cpp  main.cpp
Tarea1/src/MTree/: MTreeBySS.cpp  Node.cpp
Tarea1/src/MTree/Node/: Entry.h
Tarea1/src/Node/: Entry.cpp  Point.cpp
Tarea1/tests/: cp_tests.cc
experiment/: experiment.py
